[package]
name = "lynn_tcp"
version = "1.1.12"
edition = "2024"
rust-version = "1.87"
authors = ["lynn_tcp Contributors"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cherish-ltt/lynn_tcp"
description = "Lightweight asynchronous TCP framework"
categories = ["network-programming"]
keywords = ["tcp" , "tcp-server" , "tcp-client" , "network"]

[dependencies]
bytes = "=1.10.1"
crossbeam-deque = "=0.8.6"
tokio = { version = "=1.45.1", features = ["macros","net","sync","rt-multi-thread","time","io-util"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default=["server","client"]
server=[]
client=[]
